@@ -1,3 +1,12 @@
+2011-04-01  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Oliver Hunt.
+
+        Removed WeakGCMap::deprecatedRemove because it was deprecated and unused
+        https://bugs.webkit.org/show_bug.cgi?id=57648
+
+        * runtime/WeakGCMap.h:
+
 2011-04-01  Adam Roben  <aroben@apple.com>
 
         Maintain the invariant that Lexer::m_current is set to -1 when at the end of the code buffer
